--- a/GameCenterHome.html
+++ b/GameCenterHome.html
@@ -12,11 +12,11 @@
 
     <form action="/dummy">
         <div>
-            <label for="firstName">First Name</label>
-            <input type="text" name="firstName" id="firstName" placeholder="Enter first name..." required>
+            <label for="userName">First Name</label>
+            <input type="text" name="userName" id="userName" placeholder="Enter username..." required>
 
-            <label for="lastName">Last Name</label>
-            <input type="text" name="lastName" id="lastName" placeholder="Enter last name..." required>
+            <label for="password">Last Name</label>
+            <input type="password" name="password" id="password" placeholder="Enter password..." required>
         </div>
 
         <button>Play!</button>
