--- a/GameCenterHome.html
+++ b/GameCenterHome.html
@@ -12,10 +12,10 @@
 
     <form action="/dummy">
         <div>
-            <label for="userName">First Name</label>
+            <label for="userName">Username</label>
             <input type="text" name="userName" id="userName" placeholder="Enter username..." required>
 
-            <label for="password">Last Name</label>
+            <label for="password">Password</label>
             <input type="password" name="password" id="password" placeholder="Enter password..." required>
         </div>
 
