--- a/GameCenterHome.html
+++ b/GameCenterHome.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Myers Game Center Extravaganza!!!&#x1F389</h1>
 
-    <form action="/dummy">
+    <form action="https://www.reddit.com/r/PuppySmiles/">
         <div>
             <label for="userName">Username</label>
             <input type="text" name="userName" id="userName" placeholder="Enter username..." required>
