--- a/GameCenterHome.html
+++ b/GameCenterHome.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Games With Myers</title>
+    <link rel="stylesheet" href="MyersGames.css">
 </head>
 
 <body>
@@ -12,14 +13,19 @@
 
     <form action="https://www.reddit.com/r/PuppySmiles/">
         <div>
-            <label for="userName">Username</label>
-            <input type="text" name="userName" id="userName" placeholder="Enter username..." required>
+            <p>
+                <label for="userName">Username</label>
+                <input type="text" name="userName" id="userName" placeholder="Enter username..." required>
+                <br>
+            </p>
 
-            <label for="password">Password</label>
-            <input type="password" name="password" id="password" placeholder="Enter password..." required>
+            <p>
+                <label for="password">Password</label>
+                <input type="password" name="password" id="password" placeholder="Enter password..." required>
+            </p>
         </div>
 
-        <button>Play!</button>
+        <button>Let's Go!</button>
     </form>
 </body>
 
